# llms-from-scratch

./: .gitignore  README.md  app.py  pyproject.toml
llms_from_scratch/: chainlit_app.py  classification.py  data.py  data_classification.py  inference.py  paths.py  training.py
llms_from_scratch/models/gpt2/: __init__.py  attention.py  config.py  model.py  weights.py
scripts/: benchmark_kvcache.py  classify_text.py  finetune_classifier.py  generate_gpt2.py  pretrain_gpt2.py
